--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-url = https://github.com/poldracklab/sdcflows
+url = https://github.com/nipreps/sdcflows
 author = The SDCflows developers
-author_email = code@oscaresteban.es
+author_email = nipreps@gmail.com
 maintainer = Oscar Esteban
-maintainer_email = code@oscaresteban.es
+maintainer_email = nipreps@gmail.com
 description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
 long_description = file:README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
