--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -410,7 +410,7 @@ jobs:
           name: Check sdist package in build environment
           command: |
             source /tmp/build/bin/activate
-            twine check dist/sdcflows*.tar.gz
+            twine check dist/sdcflows*
       - run:
           name: Install sdist package into install environment and check version
           command: |
@@ -462,10 +462,6 @@ jobs:
             virtualenv --python=python3 /tmp/install_sdist
             source /tmp/install_sdist/bin/activate
             python3 -m pip install "setuptools>=30.3.0" "pip>=10.0.1"
-            deactivate
-            virtualenv --python=python3 /tmp/install_wheel
-            source /tmp/install_wheel/bin/activate
-            python3 -m pip install "setuptools>30.3.0" "pip>=10.0.1"
       - run:
           name: Build SDCflows in build environment
           command: |
@@ -474,10 +470,10 @@ jobs:
       - store_artifacts:
           path: /tmp/src/sdcflows/dist
       - run:
-          name: Check sdist package in build environment
+          name: Check sdist and wheel in build environment
           command: |
             source /tmp/build/bin/activate
-            twine check dist/sdcflows*.tar.gz
+            twine check dist/sdcflows*
       - run:
           name: Install sdist package into install environment and check version
           command: |
