--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ install_requires =
     nibabel >=3.0.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.1,<2.0
-    niworkflows >= 1.1.4
+    niworkflows >=1.1.4,<1.3
     numpy
     pybids >= 0.9.2
     templateflow >=0.4
