--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,9 @@ url = https://www.nipreps.org/sdcflows
 [options]
 python_requires = >=3.5
 setup_requires =
-    setuptools >=40.8
+    setuptools >= 42.0
+    setuptools_scm >= 3.4
+    toml
 install_requires =
     nibabel >=3.0.1
     niflow-nipype1-workflows ~= 0.0.1
