--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,7 +8,7 @@ packaging
 pydot>=1.2.3
 pydotplus
 sphinx-argparse
-sphinx>=2.1.2
+sphinx>=2.1.2,<3
 sphinx_rtd_theme
 sphinxcontrib-apidoc ~= 0.3.0
 templateflow
