--- a/setup.cfg
+++ b/setup.cfg
@@ -29,9 +29,9 @@ install_requires =
     nibabel >=3.0.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.1,<2.0
-    niworkflows >=1.2.0rc4,<1.4
+    niworkflows @ git+https://github.com/nipreps/niworkflows.git@master
     numpy
-    pybids >= 0.9.2
+    pybids >= 0.10.2
     templateflow >=0.4
 test_requires =
     codecov
