maint(flake8): update settings in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,14 +85,15 @@ parentdir_prefix =
 [flake8]
 max-line-length = 99
 doctests = False
+ignore =
+    W503
 exclude =
     *build/
     docs/sphinxext/
     docs/tools/
-putty-ignore =
-    */__init__.py : +F401
-    docs/conf.py : +E265
-    /^\s*\.\. _.*?: http/ : +E501
+per-file-ignores =
+    **/__init__.py : F401
+    docs/conf.py : E265
 
 [tool:pytest]
 norecursedirs = .git
