--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ classifiers =
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Recognition
     License :: OSI Approved :: BSD License
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 description = Susceptibility Distortion Correction (SDC) workflows for EPI MR schemes.
 license = Apache-2.0
 long_description = file:README.rst
@@ -20,7 +20,7 @@ project_urls =
 url = https://www.nipreps.org/sdcflows
 
 [options]
-python_requires = >=3.5
+python_requires = >=3.6
 setup_requires =
     setuptools >= 42.0
     setuptools_scm >= 3.4
@@ -56,8 +56,8 @@ docs =
     %(doc)s
 tests =
     pytest
-    pytest-xdist
-    pytest-cov == 2.5.1
+    pytest-xdist >= 2.0
+    pytest-cov == 2.10.1
     coverage
 all =
     %(doc)s
