--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ install_requires =
     nibabel >=3.0.1
     niflow-nipype1-workflows ~= 0.0.1
     nipype >=1.3.1,<2.0
-    niworkflows >= 1.2.0,<1.4
+    niworkflows ~= 1.3.0
     numpy
     pybids >= 0.10.2
     templateflow >=0.4
