maint: configure coverage with supbrocesses

--- a/setup.cfg
+++ b/setup.cfg
@@ -107,3 +107,6 @@ filterwarnings =
     ignore::PendingDeprecationWarning
     ignore:cmp not installed:UserWarning
     ignore:This has not been fully tested:UserWarning
+
+[coverage:run]
+concurrency = multiprocessing
