maint(wip): setting up GH actions

--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 5
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        pip: ["pip", setuptools ~= 42.0", "setuptools_scm[toml] >= 3.4"]
+        pip: ["pip 'setuptools ~= 42.0' 'setuptools_scm[toml] >= 3.4'"]
 
     steps:
     - name: Install NeuroDebian & software packages
@@ -27,10 +27,11 @@ jobs:
     - name: Install FreeSurfer's mri_robust_template
       env:
         MRI_ROBUST_TEMPLATE: sx2n7/providers/osfstorage/5e825301d0e35400ebb481f2
-        FS_LICENSE: /tmp/freesurfer/license.txt
+        FS_LICENSE: $HOME/.cache/freesurfer/license.txt
       run: |
         curl https://files.osf.io/v1/resources/$MRI_ROBUST_TEMPLATE?direct > mri_robust_template
         sudo install mri_robust_template /usr/local/bin
+        mkdir -p $HOME/.cache/freesurfer/
         echo "b2VzdGViYW5Ac3RhbmZvcmQuZWR1CjMwNzU2CiAqQ1MzYkJ5VXMxdTVNCiBGU2kvUGJsejJxR1V3Cg==" | base64 -d > $FS_LICENSE
     - name: Install DataLad
       run: pip install datalad datalad-osf
