--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -10,25 +10,30 @@ jobs:
       max-parallel: 5
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        pip: ["pip 'setuptools ~= 42.0' 'setuptools_scm[toml] >= 3.4'"]
 
     steps:
     - name: Install NeuroDebian & software packages
       run: |
         bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh);
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends git-annex-standalone fsl afni ants
+        sudo apt-get install -y --no-install-recommends fsl afni ants
     - uses: actions/cache@v1
       with:
         path: /var/lib/apt
         key: apt-cache-v1
         restore-keys: |
           apt-cache-
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${matrix.python-version}
     - name: Install DataLad
-      run: pip install datalad datalad-osf
+      run: |
+        $CONDA/bin/conda install -c conda-forge git-annex datalad pip
+        $CONDA/bin/pip install datalad-osf
     - uses: actions/checkout@v2
     - name: Install minimal dependencies
-      run: pip install -r min-requirements.txt
+      run: $CONDA/bin/pip install -r min-requirements.txt
     - uses: actions/cache@v1
       with:
         path: $HOME/.cache/pip
@@ -37,7 +42,7 @@ jobs:
           pip-cache-
     - name: Get TemplateFlow's required objects
       run: |
-        python -c "from templateflow import api as tfapi;
+        $CONDA/bin/python -c "from templateflow import api as tfapi;
             tfapi.get('MNI152NLin2009cAsym', resolution=2, desc='brain', suffix='mask');
             tfapi.get('MNI152NLin2009cAsym', resolution=1, label='brain', suffix='probseg');
             tfapi.get('MNI152NLin2009cAsym', resolution=2, desc='fMRIPrep', suffix='boldref');"
@@ -48,6 +53,8 @@ jobs:
         restore-keys: |
           tf-cache-
     - name: Install test data
+      env:
+        PATH: $PATH:$CONDA/bin/
       working-directory: $HOME/data
       run: |
         # ds001600
@@ -79,4 +86,3 @@ jobs:
         sudo install mri_robust_template /usr/local/bin
         mkdir -p $HOME/.cache/freesurfer/
         echo "b2VzdGViYW5Ac3RhbmZvcmQuZWR1CjMwNzU2CiAqQ1MzYkJ5VXMxdTVNCiBGU2kvUGJsejJxR1V3Cg==" | base64 -d > mkdir -p $HOME/.cache/freesurfer/license.txt
-        
